--- a/resources/views/layouts/main.hbs
+++ b/resources/views/layouts/main.hbs
@@ -11,7 +11,12 @@
   <title>Profiler</title>
 </head>
 
+{{!-- <body background="./../../images/whitelilly.jpeg"> --}}
+
 <body>
+  {{!-- {{ #if hasBackgroundImage }} background="{{ backgroundImage }}" {{ /if }} --}}
+
+
   <h1 class='content display'>{{ mainHeading }}</h1>
   <div class="container">
     {{{ body }}}
