--- a/resources/views/userEdit.hbs
+++ b/resources/views/userEdit.hbs
@@ -1,4 +1,4 @@
-<div class='userEdit container display'>
+<div class='userEdit container display' id='userEditPanel'>
   <h3>{{ pageTitle }}</h3>
 
   <form action='/users/UPDATE/{{p.id}}' method="POST">
