--- a/resources/css/scss/styles.scss
+++ b/resources/css/scss/styles.scss
@@ -2,13 +2,30 @@
   box-sizing: border-box;
 }
 $bg-color: cornflowerblue;
-
-body {
-  // background-color: $bg-color;
+@mixin flexColNoWrap() {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
 }
+@mixin sunnyGradient {
+  background-image: radial-gradient(yellow, #f06d06);
+}
+body {
+  // background-color: $bg-color;
+  @include flexColNoWrap();
+  // background: "./../../images/whitelilly.jpeg";
+  // background: linear-gradient($bg-color, black);
+  @include sunnyGradient();
+}
+
+#navBar {
+  background-color: black;
+  color: white !important;
+  padding: 5px;
+  line-height: 100px;
+  width: 100%;
+}
+
 h1 {
   color: blue;
   align-self: center;
@@ -19,7 +36,41 @@ h1 {
   margin-left: 20%;
   margin-right: 20%;
 }
-.controls {
-  margin-top: 5px;
-  margin-bottom: 5px;
+#userEditPanel,
+#userAddPanel {
+  @include flexColNoWrap();
+  h3 {
+    text-align: center;
+  }
+  form {
+    @include flexColNoWrap();
+  }
+  // background: linear-gradient(black, white);
+
+  background-color: $bg-color;
+  // background-image: "./../../images/whitelilly.jpeg";
+  border: 1px solid blue;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+.controlGrid {
+  padding: 5px 5px;
+}
+.control {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  align-items: stretch;
+  // background-color: bisque !important;
+  // border: 1px solid orangered;
+  margin: 5px 5px;
+  label {
+    // align-content: flex-end;
+    text-align: end;
+    margin-right: 5px;
+  }
+}
+.controlButtons {
+  // @include flexColNoWrap();
+  align-self: center;
+  margin-bottom: 10px;
 }
