--- a/resources/views/userNew.hbs
+++ b/resources/views/userNew.hbs
@@ -1,31 +1,33 @@
-<div class='userNew container display'></div>
-<h3>{{ pageTitle }}</h3>
+<div id='userAddPanel' class='userNew container display' background="{{backgroundImage}}">
+  <h3>{{ pageTitle }}</h3>
+  <form action="/users/add" method="POST" id='addUser'>
+    <div class='controlGrid'>
+      <div class='control'>
+        <label for="nameFirst">First Name: </label>
+        <input type="text" id="nameFirst" name="nameFirst" required minlength="1" size="30">
+      </div>
+      <div class='control'>
+        <label for="nameLast">Last Name: </label>
+        <input type="text" id="nameLast" name="nameLast" required minlength="1" size="30">
+      </div>
+      <div class='control'>
+        <label for="username">Username: </label>
+        <input type="text" id="username" name="username" required minlength="1" size="30">
+      </div>
+      <div class='control'>
+        <label for="email">Email: </label>
+        <input type="email" id="email" name="email" required minlength="1" size="30">
+      </div>
+    </div>
 
-<form action="/users/new" method="POST" id='addUser'>
-  <div class='control'>
-    <label for="nameFirst">First Name: </label>
-    <input type="text" id="nameFirst" name="nameFirst" required minlength="1" size="50">
-  </div>
-  <div class='control'>
-    <label for="nameLast">Last Name: </label>
-    <input type="text" id="nameLast" name="nameLast" required minlength="1" size="50">
-  </div>
-  <div class='control'>
-    <label for="username">Username: </label>
-    <input type="text" id="username" name="username" required minlength="1" size="50">
-  </div>
-  <div class='control'>
-    <label for="email">Email: </label>
-    <input type="email" id="email" name="email" required minlength="1" size="50">
-  </div>
 
-
-  <div class='control'>
-    <span>
-      <button class='' type='submit'>Save</button>
-    </span><span>
-      <button formaction='/users' formmethod='GET' formnovalidate type='cancel'>Cancel</button>
-    </span>
-  </div>
-</form>
+    <div class='controlButtons'>
+      <span>
+        <button class='' type='submit'>Save</button>
+      </span><span>
+        <button formaction='/users' formmethod='GET' formnovalidate type='cancel'>Cancel</button>
+      </span>
+    </div>
+  </form>
+</div>
 </div>
