--- a/resources/views/users.hbs
+++ b/resources/views/users.hbs
@@ -1,4 +1,4 @@
-<div class='container  display'>
+<div id='usersPanel' class='container  display'>
   <h2>{{pageTitle}}</h2>
   <p class='center blue'>{{ recordsFound }} users found</p>
   {{#if msgSuccess }}
