--- a/resources/css/scss/styles.scss
+++ b/resources/css/scss/styles.scss
@@ -2,6 +2,9 @@
   box-sizing: border-box;
 }
 $bg-color: cornflowerblue;
+$text-color: blue;
+$border-color: blue;
+
 @mixin flexColNoWrap() {
   display: flex;
   flex-flow: column nowrap;
@@ -27,17 +30,18 @@ body {
 }
 
 h1 {
-  color: blue;
+  color: $text-color;
   align-self: center;
 }
 #photoEditPanel {
   background-color: $bg-color;
-  border: 1px solid blue;
+  border: 1px solid $border-color;
   margin-left: 20%;
   margin-right: 20%;
 }
 #userEditPanel,
-#userAddPanel {
+#userAddPanel,
+#userDetailsPanel {
   @include flexColNoWrap();
   h3 {
     text-align: center;
@@ -49,7 +53,7 @@ h1 {
 
   background-color: $bg-color;
   // background-image: "./../../images/whitelilly.jpeg";
-  border: 1px solid blue;
+  border: 1px solid $border-color;
   margin-left: 20%;
   margin-right: 20%;
 }
@@ -67,6 +71,8 @@ h1 {
     // align-content: flex-end;
     text-align: end;
     margin-right: 5px;
+    font-weight: 700;
+    color: $text-color;
   }
 }
 .controlButtons {
