--- a/resources/views/photos.hbs
+++ b/resources/views/photos.hbs
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <div>
     {{#each photos}}
-    <li class="userid">{{userId}}</li>
+    <li class="userid">{{photos.userId}}</li>
     <li class="author">{{author}}</li>
     <li class="caption">{{caption}}</li>
     <li class="link">
