--- a/resources/views/layouts/main.hbs
+++ b/resources/views/layouts/main.hbs
@@ -2,24 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    {{!-- <link rel="stylesheet" type="text/scss" href="./../css/styles.scss"> --}}
-    <link rel="stylesheet" type="text/css" href="./../../css/compiled/styles.css">
-    {{!-- <link rel="stylesheet" type="text/css" href="./../../css/basic.css"> --}}
-    <title>Profiler</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  {{!-- <link rel="stylesheet" type="text/scss" href="./../css/styles.scss"> --}}
+  <link rel="stylesheet" type="text/css" href="./../../css/compiled/styles.css">
+  {{!-- <link rel="stylesheet" type="text/css" href="./../../css/basic.css"> --}}
+  <title>{{ mainHeading }}</title>
 </head>
 
 {{!-- <body background="./../../images/whitelilly.jpeg"> --}}
 
 <body>
-<<<<<<< HEAD
-    <h1 class='content display'>{{ mainHeading }}</h1>
-    <div class="container">
-        {{{ body }}}
-    </div>
-=======
   {{!-- {{ #if hasBackgroundImage }} background="{{ backgroundImage }}" {{ /if }} --}}
 
 
@@ -27,7 +21,7 @@
   <div class="container">
     {{{ body }}}
   </div>
->>>>>>> models
+  {{> footer}}
 </body>
 
 </html>
