--- a/resources/views/home.hbs
+++ b/resources/views/home.hbs
@@ -1,1 +1,11 @@
-<h2>Some Awesome Title of our page</h2>
+<h2>{{ pageTitle }}</h2>
+<p>You have arrived....</p>
+<br>
+<br>
+<p>Expect to be amazed!</p>
+
+
+
+
+<br>
+<br><br>Just Kidding
