--- a/resources/css/scss/styles.scss
+++ b/resources/css/scss/styles.scss
@@ -120,3 +120,11 @@ table {
 .reportSectionHeaderRow:hover {
   background-color: darkkhaki !important;
 }
+.icons {
+  width: 24px !important;
+  height: 24px !important;
+}
+.footer,
+.push {
+  height: 155px; /* .push must be the same height as .footer */
+}
