--- a/resources/views/partials/footer.hbs
+++ b/resources/views/partials/footer.hbs
@@ -1,4 +1,3 @@
-<br>
-<a href="/">Home</a>
-<br>
-<a href="#" onclick="history.go(-1)">Back</a>
+<a href="#" onclick="history.go(-1)" class='footer push'>
+  <img src="./../../images/leftArrow.png" class='icons' alt='Back'>
+</a>
