--- a/resources/views/partials/footer.hbs
+++ b/resources/views/partials/footer.hbs
@@ -1,3 +1,5 @@
-<a href="#" onclick="history.go(-1)" class='footer push'>
-  <img src="./../../images/leftArrow.png" class='icons' alt='Back'>
-</a>
+<footer>
+  <a href="#" onclick="history.go(-1)" class='footer push'>
+    <img src="./../../images/leftArrow.png" class='icons' alt='Back'>
+  </a>
+</footer>
