--- a/resources/views/partials/header.hbs
+++ b/resources/views/partials/header.hbs
@@ -1,4 +1,5 @@
-<a href="/">
-
-  <img src="./../../images/home.svg" alt="Home" class='icons'>
-</a>
+<div id="navbar">
+  <a href="/">
+    <img src="./../../images/home.svg" alt="Home" class='icons'>
+  </a>
+</div>
