--- a/resources/css/compiled/styles.css
+++ b/resources/css/compiled/styles.css
@@ -2,11 +2,26 @@
   box-sizing: border-box;
 }
 
-body {
+.content {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   background-image: radial-gradient(yellow, #f06d06);
+  flex: 1 0 auto;
+}
+
+#navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5px;
+  width: 100%;
+  border: 1px solid black;
+  background-color: blue;
+  color: yellow;
+  font-size: 16px;
+  font-weight: 700;
+  margin: auto auto;
 }
 
 #navBar {
@@ -15,6 +30,20 @@ body {
   padding: 5px;
   line-height: 100px;
   width: 100%;
+}
+
+footer {
+  height: 20px;
+  background-color: gray;
+  flex-shrink: 0;
+}
+
+.right {
+  align-self: flex-end;
+}
+
+.left {
+  align-self: flex-start;
 }
 
 h1 {
@@ -127,12 +156,6 @@ table [data-href] {
 .icons {
   width: 24px !important;
   height: 24px !important;
-}
-
-.footer,
-.push {
-  height: 155px;
-  /* .push must be the same height as .footer */
 }
 
 /*# sourceMappingURL=styles.css.map */
