--- a/resources/css/scss/styles.scss
+++ b/resources/css/scss/styles.scss
@@ -16,12 +16,33 @@ $specialSunriseGradient: radial-gradient(yellow, #f06d06);
 }
 body {
   // background-color: $bg-color;
-  @include flexColNoWrap();
+  // @include flexColNoWrap();
   // background: "./../../images/whitelilly.jpeg";
   // background: linear-gradient($bg-color, black);
+  // @include sunnyGradient();
+}
+.content {
+  @include flexColNoWrap();
   @include sunnyGradient();
+  flex: 1 0 auto;
+  // background-color: lightblue;
 }
 
+#navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  // margin-top: 15px;
+  padding: 5px;
+  // max-height: 100px;
+  width: 100%;
+  border: 1px solid black;
+  background-color: blue;
+  color: yellow;
+  font-size: 16px;
+  font-weight: 700;
+  margin: auto auto;
+}
 #navBar {
   background-color: black;
   color: white !important;
@@ -29,7 +50,18 @@ body {
   line-height: 100px;
   width: 100%;
 }
-
+footer {
+  // width: auto;
+  height: 20px;
+  background-color: gray;
+  flex-shrink: 0;
+}
+.right {
+  align-self: flex-end;
+}
+.left {
+  align-self: flex-start;
+}
 h1 {
   color: $text-color;
   align-self: center;
@@ -124,7 +156,7 @@ table {
   width: 24px !important;
   height: 24px !important;
 }
-.footer,
-.push {
-  height: 155px; /* .push must be the same height as .footer */
-}
+// .footer,
+// .push {
+//   height: 155px; /* .push must be the same height as .footer */
+// }
