--- a/resources/views/userNew.hbs
+++ b/resources/views/userNew.hbs
@@ -18,6 +18,14 @@
         <label for="email">Email: </label>
         <input type="email" id="email" name="email" required minlength="1" size="30">
       </div>
+      <div class='control'>
+        <label for="password">Password: </label>
+        <input type="text" id="password" name="password" required minlength="8" size="30">
+      </div>
+      <div class='control'>
+        <label for="verifyPassword">Verify Password: </label>
+        <input type="text" id="verify" name="verify" required minlength="8" size="30">
+      </div>
     </div>
 
 
