fixed the users/new.hbs cancel to reroute back to landing

--- a/resources/views/userNew.hbs
+++ b/resources/views/userNew.hbs
@@ -33,7 +33,7 @@
       <span>
         <button class='' type='submit'>Save</button>
       </span><span>
-        <button formaction='/users' formmethod='GET' formnovalidate type='cancel'>Cancel</button>
+        <button formaction='/' formmethod='GET' formnovalidate type='cancel'>Cancel</button>
       </span>
     </div>
   </form>
