fixed server.js added a page title to landing.hbs

--- a/resources/views/landing.hbs
+++ b/resources/views/landing.hbs
@@ -1,4 +1,5 @@
-<div>
+<div id="landingPanel" class="landing container display">
+    <h3>{{pageTitle}}</h3>
     <form action="/landing" method="post" id="quickLogin">
         <div id="usernameLogin">
             <label for="usernameLogin">Username: </label>
