--- a/resources/views/layouts/main.hbs
+++ b/resources/views/layouts/main.hbs
@@ -18,7 +18,12 @@
   <div class='content container'>
     {{!-- {{ #if hasBackgroundImage }} background="{{ backgroundImage }}" {{ /if }} --}}
     {{> header}}
-
+    {{#if msgSuccess }}
+    <p class='success'>{{msgSuccess}}</p>
+    {{/if }}
+    {{#if msgFail }}
+    <p class='fail'>{{msgFail}}</p>
+    {{/if }}
     <h1 class='content display'>{{ mainHeading }}</h1>
     {{!-- <div class="container"> --}}
     {{{ body }}}
