--- a/resources/views/partials/logout.hbs
+++ b/resources/views/partials/logout.hbs
@@ -1,8 +1,5 @@
 <div id="logout">
-  {{!-- <a href="/">
-    <img src="./../../images/home.svg" alt="Home" class='icons'>
-  </a> --}}
-  <form action="/auth/logout">
+  <form action="/auth/logout" method="POST">
     <button>Logout</button>
   </form>
 </div>
