--- a/resources/views/userNew.hbs
+++ b/resources/views/userNew.hbs
@@ -20,16 +20,19 @@
       </div>
       <div class='control'>
         <label for="password">Password: </label>
-        <input type="password" id="password" name="password" required minlength="8" size="30"
+        <input type="password" id="password" name="password" required minlength="8" size="20px"
+          autocomplete="new-password">
+        {{!-- <input type="password" id="password" name="password" required minlength="8" size="30"
           pattern="(?=^.{8,30}$)((?=.*\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*"
           autocomplete="new-password"
-          title="Password must have the following criteria: between 8 and 30 characters, 1 digit, 1 uppercase letter, 1 lowercase letter, and 1 special character">
+          title="Password must have the following criteria: between 8 and 30 characters, 1 digit, 1 uppercase letter, 1 lowercase letter, and 1 special character"> --}}
       </div>
       <div class='control'>
         <label for="verifyPassword">Verify Password: </label>
-        <input type="password" id="verify" name="verify" required minlength="8" size="30"
+        <input type="password" id="verify" name="verify" required minlength="8" size="20px" autocomplete="new-password">
+        {{!-- <input type="password" id="verify" name="verify" required minlength="8" size="30"
           pattern="(?=^.{8,30}$)((?=.*\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*"
-          autocomplete="new-password">
+          autocomplete="new-password"> --}}
       </div>
     </div>
 
@@ -44,5 +47,3 @@
   </form>
 </div>
 </div>
-
-{{!-- {{> footer}} --}}
