--- a/resources/views/landingPage.hbs
+++ b/resources/views/landingPage.hbs
@@ -3,8 +3,8 @@
 
   <form action="/auth/login" method="post" id="quickLogin">
     <div class='control'>
-      <label for="username">Username: </label>
-      <input type="text" id="username" name="username" required minlength="8" size="20">
+      <label for="email">Email: </label>
+      <input type="email" id="email" name="email" required>
     </div>
     <div class='control'>
       <label for="password">Password: </label>
@@ -15,8 +15,7 @@
     </div>
 
   </form>
-  <?php
-  echo $_SERVER; ?>
+
 
   <div>
     <h3>BECOME A REMEMBER MEMBER BEFORE SEPTEMBER</h3>
