commented out console.logs

--- a/resources/views/layouts/main.hbs
+++ b/resources/views/layouts/main.hbs
@@ -29,6 +29,9 @@
     {{{ body }}}
     {{!-- </div> --}}
   </div>
+  <script>
+    console.log('sessionStorage: ', sessionStorage);
+  </script>
   {{> footer }}
 </body>
 
